started database and webapp controller code

--- a/templates/chewie.html
+++ b/templates/chewie.html
@@ -10,5 +10,8 @@
 
 <div id="wrapper">
 	<h1>Soon you will be able to treat me.  I dance for treats</h1>
-	<img src="http://dl.dropbox.com/u/42873802/Images/chewie.gif" />
+    <img src="http://dl.dropbox.com/u/42873802/Images/chewie.gif" />
+    <form>
+
+    </form>
 </div>	
