--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,26 @@
 
 <div id="howitworksWrapper" style="display:none;">
 	<img src="{{static_url('img/howitworks.png')}}" />
-	<p class="howitworksDescription">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum</p>
+	
+	<p class="howitworksDescription">The easiest way to break down what's going on with our treat machine is to break it into two workflows: what the user sees and what is happening with Chewie and her treat machine aka what's actually happening.</p>
+
+	<p class="howitworksDescription">What the user sees:<br>
+	When a user enters their name and phone number they are added to the Chewie treat queue.  When it's time for their treat dispensed they'll receive a Facetime call where they'll get to see their treat drop and Chewie enjoy it!</p>
+
+	<p class="howitworksDescription">What's actually happening:</p>
+	To understand what's going on it's best to first understand how the actual treat machine works.  The treat machine body is a gumball machine that was modified to dispense dog treats instead of gumballs and also had its coin mechanism replaced with a servo controlled by an ardiuno.  The ardiuno controlled treat machine and a webcam are plugged into a mac mini that is running a web server which is hosting www.treatchewie.com.  Using a combination of python, arduino code, and applescript we are able to control the treat dispenser as well as make facetime calls.	</p>
+<p class="howitworksDescription">
+	For those of you interested in building your own treat machine, a detailed set of build instructions will be available on <a href="www.hackaddict.net">hackaddict.net</a> in the near future.
+
+	</p>
+
+	Some things to note:
+	<ul>
+	<li>Chewie is only receives treats once an hour on the hour</li>
+	<li>Chewie is only open for treat business Monday through Friday 10a-6p</li>
+	<li>In order to recieve Chewie's call you must have an iPhone with Facetime and you must be on WIFI at the time of the call</li>
+	</ul>
+
 </div>
 
 
