--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
 
 <div id="share">
 	<p class="share">share</p>
-	<img src="{{static_url('img/fb.png')}}" />
+	<img src="{{static_url('img/fb.png')}}" /><iframe src="//www.facebook.com/plugins/like.php?href=www.treatchewie.com&amp;send=false&amp;layout=standard&amp;width=20&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=35&amp;appId=143089569079082" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:20px; height:35px;" allowTransparency="true"></iframe>
 	<a href="https://twitter.com/share?text=I+treated+Chewie+and+you+should+too!&url=http://www.treatchewie.com"><img src="{{static_url('img/tw.png')}}" /></a>
 	<p class="howitworks">how it works</p><p class="home">home</p>
 </div>
@@ -75,8 +75,7 @@
 
 	<p class="howitworksDescription">What's actually happening:<br>
 	To understand what's going on it's best to first understand how the actual treat machine works.  The treat machine body is a gumball machine that was modified to dispense dog treats instead of gumballs and also had its coin mechanism replaced with a servo controlled by an ardiuno.  The ardiuno controlled treat machine and a webcam are plugged into a mac mini that is running a web server which is hosting www.treatchewie.com.  Using a combination of python, arduino code, and applescript we are able to control the treat dispenser as well as make facetime calls.	</p>
-<p class="howitworksDescription">
-	For those of you interested in building your own treat machine, a detailed set of build instructions will be available on <a href="www.hackaddict.net">hackaddict.net</a> in the near future.</p>
+<p class="howitworksDescription">For those of you interested in building your own treat machine, a detailed set of build instructions will be available on <a href="http://www.hackaddict.net">hackaddict.net</a> in the near future.</p>
 
 	Some things to note:
 	<ul>
