--- a/templates/index.html
+++ b/templates/index.html
@@ -80,6 +80,7 @@ $(document).ready(function(){
 	<div class="row"> 
 		<h1>Congratulations, you've scheduled a Chewie treat appointment for:</h1>
 		<p id="appointment"></p>
+		<p><i>*Chewie will send you a reminder text message ten minutes before you appointment.  Remember you need to be on wifi during the call for facetime to work.</i></p>
 	</div>
 </div>
 
