styled finished page

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -103,14 +103,18 @@ input {
 }
 .row {
 	border-top: 1px solid white;
-	width: 870px;
+	width: 535px;
 	margin: 35px 0;
 }
 .row h1 {
-	color: #ffea05;
+	color: #FFEA05;
 	font-size: 20px;
 	font-weight: normal;
-	margin: 35px 0;
+	margin: 35px 0px 20px 0px;
+}
+.row h2 {
+	color: #b546a2;
+	margin-left: 10px;
 }
 /*how it works style */
 #howitworksWrapper {
