--- a/templates/index.html
+++ b/templates/index.html
@@ -78,9 +78,8 @@ $(document).ready(function(){
 <div id="submitWrapper" style="display:none;">
 	<img class="clock" src="{{static_url('img/finished.png')}}">
 	<div class="row"> 
-		<h1>Congratulations, you've scheduled a Chewie treat appointment for:</h1>
+		<h1>Congratulations, you've scheduled an appointment for:</h1>
 		<h2 id="appointment"></h2>
-		<p><i>*Chewie will send you a reminder text message ten minutes before you appointment.  Remember you need to be on wifi during the call for facetime to work.</i></p>
 	</div>
 </div>
 
