--- a/templates/backdoor.html
+++ b/templates/backdoor.html
@@ -44,10 +44,10 @@ $(document).ready(function(){
 
 <div id="homeBG">	
 	<div id="homeWrapper">
-        <div style="margin-top:100px"></div>
-		The backdoor page is for testing and dispensing treats on demand.  You can make a facetime call and then you can click the "dispense treat" button to dispense treats on demand.  Have fun!
+		<p style="margin-top:130px;">The backdoor page is for testing and dispensing treats on demand.  You can make a facetime call and then you can click the "dispense treat" button to dispense treats on demand.  Have fun!</p>
 		<form action="/backdoor" method="POST" id="make_call_form">
 			<div class="submit">
+				<p>your phone number</p>
 				<input type="text" id="phone" name="phone" />
 			</div>	
 			<img class="makeCall" src="{{static_url('img/call.png')}}" />
