added backdoor png

--- a/templates/backdoor.html
+++ b/templates/backdoor.html
@@ -44,13 +44,11 @@ $(document).ready(function(){
 
 <div id="homeBG">	
 	<div id="homeWrapper">
-		<p style="margin-top:130px;">The backdoor page is for testing and dispensing treats on demand.  You can make a facetime call and then you can click the "dispense treat" button to dispense treats on demand.  Have fun!</p>
+		<img class="chewiePic" src="{{static_url('img/backdoor.png')}}" />
+		<p>The backdoor page is for testing and dispensing treats on demand.  You can make a facetime call and then you can click the "dispense treat" button to dispense treats on demand.  Have fun!</p>
 		<form action="/backdoor" method="POST" id="make_call_form">
-			<div class="submit">
-				<p>your phone number</p>
-				<input type="text" id="phone" name="phone" />
-			</div>	
-			<img class="makeCall" src="{{static_url('img/call.png')}}" />
+				<input style="float:left; margin-top: 5px;" type="text" id="phone" name="phone" />
+			<img class="makeCall" style="margin-left: 20px;" src="{{static_url('img/call.png')}}" />
 		</form>
         </br>
 		<form action="/backdoor" method="POST" id="dispense_form">
