added faeds to backdoor buttons

--- a/templates/backdoor.html
+++ b/templates/backdoor.html
@@ -11,6 +11,8 @@ $(document).ready(function(){
 	});
 
 	$(".makeCall").click(function(){
+		$('.makeCall').fadeOut(1000);
+		$('.makeCall').fadeIn(1000);
 		var data = {
 			'phone': $('#phone').val(),
 		};
@@ -24,6 +26,8 @@ $(document).ready(function(){
 	});
 
     $(".dispenseTreat").click(function(){
+		$('.dispenseTreat').fadeOut(1000);
+		$('.dispenseTreat').fadeIn(1000);
 		var data = {
 			'dispense': 1,
 		};
@@ -45,7 +49,7 @@ $(document).ready(function(){
 <div id="homeBG">	
 	<div id="homeWrapper">
 		<img class="chewiePic" src="{{static_url('img/backdoor.png')}}" />
-		<p>The backdoor page is for testing and dispensing treats on demand.  You can make a facetime call and then you can click the "dispense treat" button to dispense treats on demand.  Have fun!</p>
+		<p>The backdoor page is for testing and dispensing treats on demand.  You can make a facetime call and then you can click the "dispense treat" button to dispense treats.  Have fun!</p>
 		<form action="/backdoor" method="POST" id="make_call_form">
 				<input style="float:left; margin-top: 10px;" type="text" id="phone" name="phone" />
 			<img class="makeCall" style="margin-left: 20px;" src="{{static_url('img/call.png')}}" />
