phone validator for backdoor

--- a/templates/backdoor.html
+++ b/templates/backdoor.html
@@ -9,7 +9,22 @@ $(document).ready(function(){
 	$("body").ready(function(){
 	    $('#homeBG').fadeIn(3000);
 	});
+	
+	jQuery.validator.addMethod("phoneUS", function(phone_number, element) {
+	    phone_number = phone_number.replace(/\s+/g, ""); 
+		return this.optional(element) || phone_number.length > 9 &&
+			phone_number.match(/^(1-?)?(\([2-9]\d{2}\)|[2-9]\d{2})-?[2-9]\d{2}-?\d{4}$/);
+	}, "Please specify a valid phone number");
 
+	$("#make_call_form").validate({
+	  rules: {
+	    field: {
+	      required: true,
+	      phoneUS: true
+	    }
+	  }
+	
+	});
 	$(".makeCall").click(function(){
 		$('.makeCall').fadeOut(1000);
 		$('.makeCall').fadeIn(1000);
