--- a/templates/backdoor.html
+++ b/templates/backdoor.html
@@ -4,6 +4,8 @@
 <title>Treat Chewie</title>
 <LINK href="{{static_url('css/main.css')}}" rel="stylesheet" type="text/css">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="http://dev.jquery.com/view/trunk/plugins/validate/jquery.validate.js"></script>
+
 <script>
 $(document).ready(function(){
 	$("body").ready(function(){
@@ -25,6 +27,7 @@ $(document).ready(function(){
 	  }
 	
 	});
+	
 	$(".makeCall").click(function(){
 		$('.makeCall').fadeOut(1000);
 		$('.makeCall').fadeIn(1000);
