--- a/templates/backdoor.html
+++ b/templates/backdoor.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <title>Treat Chewie</title>
-<LINK href="{{static_url('css/main.css')}}" rel="stylesheet" type="text/css">
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="http://dev.jquery.com/view/trunk/plugins/validate/jquery.validate.js"></script>
+<link type="text/css" href="{{static_url('css/main.css')}}" rel="stylesheet">
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/additional-methods.js"></script>
 
 <script>
 $(document).ready(function(){
