--- a/templates/backdoor.html
+++ b/templates/backdoor.html
@@ -4,7 +4,7 @@
 <title>Treat Chewie</title>
 <link type="text/css" href="{{static_url('css/main.css')}}" rel="stylesheet">
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
-<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/additional-methods.js"></script>
+<script type="text/javascript" src="http://dev.jquery.com/view/trunk/plugins/validate/jquery.validate.js"></script>
 
 <script>
 $(document).ready(function(){
