--- a/templates/backdoor.html
+++ b/templates/backdoor.html
@@ -21,7 +21,7 @@ $(document).ready(function(){
 	$(".makeCall").click(function(){
 		$("#make_call_form").validate({
 		  rules: {
-		    field: {
+		    phone: {
 		      required: true,
 		      phoneUS: true
 		    }
