--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,9 @@ $(document).ready(function(){
 				console.log('error');
 			}
 		});  
+		$(':input','#add_form')
+		 .not(':button, :submit, :reset, :hidden')
+		 .val('');
 	});
 
 	$(".howitworks").click(function(){
