--- a/static/css/main.css
+++ b/static/css/main.css
@@ -68,7 +68,7 @@ input {
 }
 .chewieDescription {
 	margin: 30px 0;
-	line-height: 1.5em;
+	/*line-height: 1.5em;*/
 }
 .submit {
 	width: 300px;
@@ -137,6 +137,9 @@ input {
 #backdoorWrapper #phone {
 	float:left; 
 	margin-top: 10px;
+}
+#backdoorWrapper {
+	margin-top: 0px;
 }
 .makeCall {
 	margin-left: 20px;
