--- a/templates/index.html
+++ b/templates/index.html
@@ -99,21 +99,12 @@ $(document).ready(function(){
 
 <div id="howitworksWrapper" style="display:none;">
 	<img src="{{static_url('img/howitworks.png')}}" />
-	
-	<p class="howitworksDescription">The easiest way to break down what's going on with our treat machine is to break it into two workflows: what the user sees and what is actually happening.</p>
-
-	<p class="howitworksDescription">What the user sees:<br>
-	When a user enters their name and phone number they are added to the Chewie treat queue.  When it's time for their treat dispensed they'll receive a Facetime call where they'll get to see their treat drop and Chewie enjoy it!</p>
-
-	<p class="howitworksDescription">What's actually happening:<br>
-	To understand what's going on it's best to first understand how the actual treat machine works.  The treat machine body is a gumball machine that was modified to dispense dog treats instead of gumballs.  It also had its coin mechanism replaced with a servo controlled by an ardiuno.  The ardiuno controlled treat machine and a webcam are plugged into a mac mini that is running a web server which is hosting www.treatchewie.com.  Using a combination of python, arduino code, and applescript we are able to control the treat dispenser as well as make Facetime calls.	</p>
-<p class="howitworksDescription">For those of you interested in building your own treat machine, a detailed set of build instructions will be available on <a href="http://www.hackaddict.net">hackaddict.net</a> in the near future.</p>
-
+	<iframe src="http://player.vimeo.com/video/32905558?title=0&amp;byline=0&amp;portrait=0" width="400" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 	Some things to note:
 	<ul>
 	<li>Chewie is only receives treats once an hour on the hour</li>
 	<li>Chewie is only open for treat business Monday through Friday 10a-6p</li>
-	<li>In order to recieve Chewie's call you must have an iPhone with Facetime and you must be on WIFI at the time of the call</li>
+	<li>In order to receive Chewie's call you must have an iPhone with Facetime and you must be on WIFI at the time of the call</li>
 	</ul>
 
 </div>
