--- a/static/css/main.css
+++ b/static/css/main.css
@@ -70,6 +70,9 @@ input {
 	margin: 30px 0;
 	/*line-height: 1.5em;*/
 }
+#howitworksVideo {
+	display: block;
+}
 .submit {
 	width: 300px;
 	float: left;
