--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,9 @@
 <link rel="apple-touch-icon" href="{{static_url('img/apple-touch-icon.png')}}" />
 <LINK href="{{static_url('css/main.css')}}" rel="stylesheet" type="text/css">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
+<link rel="stylesheet" href="{{static_url('css/prettyPhoto.css')}}" type="text/css" media="screen" title="prettyPhoto main stylesheet" charset="utf-8" />
+<script src="{{static_url('js/jquery.prettyPhoto.js')}}" type="text/javascript" charset="utf-8"></script>
+
 <script>
 $(document).ready(function(){
 
@@ -80,14 +83,7 @@ $(document).ready(function(){
 <div id="homeBG">	
 	<div id="homeWrapper">
 		<img class="chewiePic" src="{{static_url('img/treatsforchewie.png')}}" />
-		<p class="chewieDescription">To send Chewie a treat enter your name and phone number into the input boxes below. Your name will be added to a queue, ten minutes before your turn Chewie will text you, and then when it's your turn Ms. Chewie will call you on facetime so you can see your treat being eaten (yes you have to have an iPhone with facetime and be on wifi).</p>
-		
-		<div id="howitworksVideo">
-			<iframe src="http://player.vimeo.com/video/32905558?title=0&amp;byline=0&amp;portrait=0" width="400" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> <br>
-		
-
-		</div>
-		
+		<p class="chewieDescription">To send Chewie a treat enter your name and phone number into the input boxes below. Your name will be added to a queue, ten minutes before your turn Chewie will text you, and then when it's your turn Ms. Chewie will call you on facetime so you can see your treat being eaten (yes you have to have an iPhone with facetime and be on wifi).	<a title="An explanation of how Chewie's treat machine works." href="http://vimeo.com/32905558&width=700" rel="prettyPhoto">Confused? Watch the video!</a></p>
 		
 		<form action="/add" method="POST" id="add_form">
 			<div class="submit">
@@ -112,7 +108,11 @@ $(document).ready(function(){
 		<h1 id="error_message"></h2>
 	</div>
 </div>
-
+	<script type="text/javascript" charset="utf-8">
+		$(document).ready(function(){
+			$("a[rel^='prettyPhoto']").prettyPhoto({animation_speed:'fast',slideshow:10000, hideflash: true});
+		});
+	</script>
 
 </body>
 
